--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>RPLtemp</h1>
       <div class="intro">
         <div class="portrait">
-          <img src="images/portrait_square.jpg">
+          <img src="images/auto_trax.jpg">
         </div>
         <div class="intro_text">
 	  <p>Hey, I'm RPLtemp.</p>
